--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Octocat.GitHub.io by jackawaggle</title>
+    <title>Welcome to the Octocat Homepage by Jessica Lindsey</title>
   </head>
 
   <body>
